--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "test": "ember test"
   },
   "devDependencies": {
-    "@ember/optional-features": "^1.0.0",
+    "@ember/jquery": "^1.1.0",
+    "@ember/optional-features": "^1.3.0",
     "babel-eslint": "^10.0.3",
+    "bootstrap": "^4.4.1",
     "broccoli-asset-rev": "^3.0.0",
+    "ember-bootstrap": "^3.1.3",
+    "ember-bootstrap-datepicker": "^2.0.9",
     "ember-cli": "~3.13.1",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.11.1",
@@ -39,6 +43,7 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.5.1",
     "ember-resolver": "^5.3.0",
+    "ember-simple-auth": "^3.0.0",
     "ember-source": "~3.13.0",
     "ember-welcome-page": "^4.0.0",
     "eslint-plugin-ember": "^7.1.0",
